--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,12 @@
     "lib": [
       "es2018",
       "dom"
-    ]
+    ],
+    "paths": {
+      "mylib": [
+        "dist/mylib/mylib",
+        "dist/mylib"
+      ]
+    }
   }
 }
